# EECS568-imu-dead-reckoning

./: README.md
ESP32-imu-dead-reckoning/include/: BLE.h  IMU.h
ESP32-imu-dead-reckoning/src/: BLE.cpp  IMU.cpp  main.cpp
data-collection/: CMakeLists.txt  dead_reckoning.py  imu_in_ekf.py  imu_in_ekf_raw.py  imu_inv_ekf.py
data-collection/data/: imu_data.csv  imu_data_quaternion_sqaure.csv  imu_data_raw.csv  imu_data_raw_line_2.csv  imu_data_raw_line_turn_2.csv  imu_data_raw_sqaure_2.csv  imu_data_square.csv  imu_data_straight_line.csv
data-collection/src/: imu_ble.cpp
imu-dead-reckoning/: platformio.ini
imu-dead-reckoning/include/: BLE.h  IMU.h
imu-dead-reckoning/src/: BLE.cpp  IMU.cpp  main.cpp
laptop-imu-dead-reckoning/data/: imu_data_chair_raw.csv  imu_data_line_and_turn.csv  imu_data_quaternion_line.csv  imu_data_raw.csv  imu_data_raw_line_turn.csv  imu_data_raw_sqaure_initvalsareat11foraccel.csv
laptop-imu-dead-reckoning/src/: imu_ble.cpp  imu_inv_ekf.py
